Add poster sessions

--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -1015,7 +1015,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "groups = defaultdict(list)\n",
     "current_group_name = None\n",
     "\n",
@@ -1184,6 +1183,24 @@
     "                chair=\"Tiago\",\n",
     "                cochair=\"Jennifer\",\n",
     "                room=\"Spazio 35\",\n",
+    "            ),\n",
+    "            'Tuesday Poster Session 1': dict(\n",
+    "                order=10,\n",
+    "                day=\"Tuesday\",\n",
+    "                date=\"April 25th\",\n",
+    "                start=\"16.00\",\n",
+    "                end=\"17.00\",\n",
+    "                title=\"Poster Session 1 (Even Numbers)\",\n",
+    "                room=\"Agora\",\n",
+    "            ),\n",
+    "            'Tuesday Poster Session 2': dict(\n",
+    "                order=11,\n",
+    "                day=\"Tuesday\",\n",
+    "                date=\"April 25th\",\n",
+    "                start=\"17.00\",\n",
+    "                end=\"18.00\",\n",
+    "                title=\"Poster Session 2 (Odd Numbers)\",\n",
+    "                room=\"Agora\",\n",
     "            ),\n",
     "        }\n",
     "    },\n",
@@ -1780,7 +1797,21 @@
        "      'personDescription': 'researcher',\n",
        "      'personLabel': 'Jennifer Harrow',\n",
        "      'topics': 'health data, phenomics, Genome Annotation, genome annotation, omics, biodiversity',\n",
-       "      'twitter': 'JenHarrow'}]}]},\n",
+       "      'twitter': 'JenHarrow'}]},\n",
+       "   {'order': 10,\n",
+       "    'day': 'Tuesday',\n",
+       "    'date': 'April 25th',\n",
+       "    'start': '16.00',\n",
+       "    'end': '17.00',\n",
+       "    'title': 'Poster Session 1 (Even Numbers)',\n",
+       "    'room': 'Agora'},\n",
+       "   {'order': 11,\n",
+       "    'day': 'Tuesday',\n",
+       "    'date': 'April 25th',\n",
+       "    'start': '16.00',\n",
+       "    'end': '17.00',\n",
+       "    'title': 'Poster Session 2 (Odd Numbers)',\n",
+       "    'room': 'Agora'}]},\n",
        " {'day': 'Wednesday',\n",
        "  'date': 'April 26th',\n",
        "  'sessions': [{'order': 10,\n",
@@ -2001,10 +2032,13 @@
     "    for key, data in sorted(day['sessions'].items(), key=lambda e: e[1][\"order\"]):\n",
     "        if (groups_df := groups.get(key)) is not None:\n",
     "            data[\"talks\"] = groups_df.to_dict(orient=\"records\")\n",
-    "        data[\"chairs\"] = [\n",
-    "            name_to_person[data.pop(\"chair\").lower()].copy(),\n",
-    "            name_to_person[data.pop(\"cochair\").lower()].copy(),\n",
+    "        chairs = [\n",
+    "            name_to_person[data.pop(chair_key).lower()].copy()            \n",
+    "            for chair_key in [\"chair\", \"cochair\"]\n",
+    "            if chair_key in data\n",
     "        ]\n",
+    "        if chairs:\n",
+    "            data[\"chairs\"] = chairs\n",
     "        rows.append(data)\n",
     "        \n",
     "    day[\"sessions\"] = rows\n",
