--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -1075,9 +1075,18 @@
     "                order=0,\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                start=\"14.30\",\n",
-    "                end=\"15.00\",\n",
-    "                title=\"Salutation\",\n",
+    "                end=\"15.45\",\n",
+    "                title=\"Conference Salutation\",\n",
     "\n",
+    "            ),\n",
+    "            'Monday Salutation ISB': dict(\n",
+    "                chair=\"charles\",\n",
+    "                cochair=\"silvio\",\n",
+    "                order=0.5,\n",
+    "                room=\"Sala Piero Tortolina Auditorium\",\n",
+    "                start=\"14.45\",\n",
+    "                end=\"15.00\",\n",
+    "                title=\"ISB Greeting from Ruth Lovering (Chair of the ISB EC)\",\n",
     "            ),\n",
     "            'Monday Keynote': dict(\n",
     "                chair=\"charles\",\n",
@@ -1256,6 +1265,9 @@
     "                order=14,\n",
     "                chair=\"charles\",\n",
     "                cochair=\"silvio\",\n",
+    "                start=\"14.30\",\n",
+    "                end=\"15.30\",\n",
+    "                title=\"Valediction and ISB Time\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "            ),\n",
     "        }\n",
@@ -1277,8 +1289,36 @@
        "  'sessions': [{'order': 0,\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'start': '14.30',\n",
+       "    'end': '15.45',\n",
+       "    'title': 'Conference Salutation',\n",
+       "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
+       "      'genderLabel': 'male',\n",
+       "      'github': 'cthoyt',\n",
+       "      'gscholar': 'PjrpzUIAAAAJ',\n",
+       "      'image': 'http://commons.wikimedia.org/wiki/Special:FilePath/Charles%20Tapley%20Hoyt%202019.jpg',\n",
+       "      'linkedin': 'cthoyt',\n",
+       "      'max_start_date': '2021-02-15T00:00:00Z',\n",
+       "      'nationalityLabel': 'United States of America',\n",
+       "      'orcid': '0000-0003-4423-4370',\n",
+       "      'person': 'Q47475003',\n",
+       "      'personDescription': 'American chemist',\n",
+       "      'personLabel': 'Charles Tapley Hoyt',\n",
+       "      'topics': 'knowledge graph, ontology, natural language processing',\n",
+       "      'twitter': 'cthoyt',\n",
+       "      'note': 'Co-Chair'},\n",
+       "     {'employerLabel_': 'University of Padua',\n",
+       "      'genderLabel': 'male',\n",
+       "      'nationalityLabel': 'Italy',\n",
+       "      'orcid': '0000-0003-4525-7793',\n",
+       "      'person': 'Q60220727',\n",
+       "      'personDescription': None,\n",
+       "      'personLabel': 'Silvio Tosatto',\n",
+       "      'note': 'Co-Chair'}]},\n",
+       "   {'order': 0.5,\n",
+       "    'room': 'Sala Piero Tortolina Auditorium',\n",
+       "    'start': '14.45',\n",
        "    'end': '15.00',\n",
-       "    'title': 'Salutation',\n",
+       "    'title': 'ISB Greeting from Ruth Lovering (Chair of the ISB EC)',\n",
        "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'cthoyt',\n",
@@ -1808,8 +1848,8 @@
        "   {'order': 11,\n",
        "    'day': 'Tuesday',\n",
        "    'date': 'April 25th',\n",
-       "    'start': '16.00',\n",
-       "    'end': '17.00',\n",
+       "    'start': '17.00',\n",
+       "    'end': '18.00',\n",
        "    'title': 'Poster Session 2 (Odd Numbers)',\n",
        "    'room': 'Agora'}]},\n",
        " {'day': 'Wednesday',\n",
@@ -1995,6 +2035,9 @@
        "      'twitter': 'MINT_database',\n",
        "      'note': 'Co-Chair'}]},\n",
        "   {'order': 14,\n",
+       "    'start': '14.30',\n",
+       "    'end': '15.30',\n",
+       "    'title': 'Valediction and ISB Time',\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
        "      'genderLabel': 'male',\n",
