Add paula leitmann

--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -1086,14 +1086,14 @@
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                start=\"14.45\",\n",
     "                end=\"15.00\",\n",
-    "                title=\"ISB Greeting from Ruth Lovering (Chair of the ISB EC)\",\n",
+    "                title=\"ISB Greeting from Ruth Lovering (ISB EC Chair)\",\n",
     "            ),\n",
     "            'Monday Keynote': dict(\n",
     "                chair=\"charles\",\n",
     "                cochair=\"deepti\",\n",
     "                order=1,\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
-    "                title=\"Keynote 1 - Nathalie Conte\",\n",
+    "                title=\"Keynote 1 - Paula Leitman\",\n",
     "                start=\"15.00\",\n",
     "                end=\"16.00\",\n",
     "                day=\"Monday\",\n",
@@ -1318,7 +1318,7 @@
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'start': '14.45',\n",
        "    'end': '15.00',\n",
-       "    'title': 'ISB Greeting from Ruth Lovering (Chair of the ISB EC)',\n",
+       "    'title': 'ISB Greeting from Ruth Lovering (ISB EC Chair)',\n",
        "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'cthoyt',\n",
@@ -1344,7 +1344,7 @@
        "      'note': 'Co-Chair'}]},\n",
        "   {'order': 1,\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
-       "    'title': 'Keynote 1 - Nathalie Conte',\n",
+       "    'title': 'Keynote 1 - Paula Leitman',\n",
        "    'start': '15.00',\n",
        "    'end': '16.00',\n",
        "    'day': 'Monday',\n",
