--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -146,7 +146,7 @@
        "  'personLabel': 'Peter Uetz',\n",
        "  'topics': 'Protein function prediction, protein-protein interaction, biodiversity',\n",
        "  'twitter': 'peteruetz'},\n",
-       " 'sabrina': {'employerLabel_': 'University of Colorado Anschutz Medical Campus',\n",
+       " 'sabrina': {'employerLabel_': 'University of Colorado',\n",
        "  'genderLabel': 'female',\n",
        "  'github': 'sabrinatoro',\n",
        "  'gscholar': '0EmO2vwAAAAJ',\n",
@@ -207,7 +207,7 @@
        "  'personDescription': None,\n",
        "  'personLabel': 'Silvio Tosatto',\n",
        "  'note': 'Co-Chair'},\n",
-       " 'deepak': {'employerLabel_': 'SIB Swiss Institute of Bioinformatics',\n",
+       " 'deepak': {'employerLabel_': 'SIB',\n",
        "  'genderLabel': 'male',\n",
        "  'github': 'deepakunni3',\n",
        "  'gscholar': '38ZnUjsAAAAJ',\n",
@@ -225,7 +225,7 @@
        "  'person': 'Q90663571',\n",
        "  'nationalityLabel': 'Italy',\n",
        "  'employerLabel_': 'University of Padua'},\n",
-       " 'monica': {'employerLabel_': 'University of Colorado - Anschutz Medical Campus',\n",
+       " 'monica': {'employerLabel_': 'University of Colorado',\n",
        "  'genderLabel': 'female',\n",
        "  'github': 'monicacecilia',\n",
        "  'gscholar': '0bGKBS0AAAAJ',\n",
@@ -239,6 +239,7 @@
        "  'topics': 'knowledge representation and reasoning, biocuration, data science, comparative genomics, human disease, genomics',\n",
        "  'twitter': 'monimunozto'},\n",
        " 'paola': {'genderLabel': 'female',\n",
+       "  'employerLabel_': 'Self-employed (SciBite consultant)',\n",
        "  'github': 'paolaroncaglia',\n",
        "  'gscholar': 'mruxdxAAAAAJ',\n",
        "  'linkedin': 'paolaroncaglia',\n",
@@ -249,7 +250,7 @@
        "  'personLabel': 'Paola Roncaglia',\n",
        "  'topics': 'transcriptomics, genome annotation, Genome Annotation, cell type, Gene Ontology, ontology',\n",
        "  'twitter': 'paola_roncaglia'},\n",
-       " 'philippe': {'employerLabel_': 'Swiss Institute of Bioinformatics',\n",
+       " 'philippe': {'employerLabel_': 'SIB',\n",
        "  'genderLabel': 'male',\n",
        "  'gscholar': 'Bz8HmVoAAAAJ',\n",
        "  'linkedin': 'philippe-le-mercier-846b5713',\n",
@@ -306,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14dd1a84",
+   "id": "14330601",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
        "      <th>9</th>\n",
        "      <td>10:00-10:10</td>\n",
        "      <td>lightning-10' (talk+Q&amp;A)</td>\n",
-       "      <td>Federica Quaglia, Damiano Piovesan, Silvio Tos...</td>\n",
+       "      <td>Adel Bouhraoua, Federica Quaglia, Damiano Piov...</td>\n",
        "      <td>APICURON: standardizing attribution of biocura...</td>\n",
        "      <td>966.0</td>\n",
        "    </tr>\n",
@@ -494,7 +495,7 @@
        "      <th>20</th>\n",
        "      <td>1:30-1:50</td>\n",
        "      <td>long-20' (talk+Q&amp;A)</td>\n",
-       "      <td>Maria Victoria Nugnes, Federica Quaglia, Luigg...</td>\n",
+       "      <td>Silvio Tosatto, Maria Victoria Nugnes, Federic...</td>\n",
        "      <td>Biocuration in DisProt, the manually curated d...</td>\n",
        "      <td>1006.0</td>\n",
        "    </tr>\n",
@@ -542,7 +543,7 @@
        "      <th>26</th>\n",
        "      <td>3:05-3:15</td>\n",
        "      <td>lightning-10' (talk+Q&amp;A)</td>\n",
-       "      <td>Dorotea Dudaš, Ulrike Wittig, Maja Rey, Andrea...</td>\n",
+       "      <td>Ulrike Wittig, Dorotea Dudaš, Maja Rey, Andrea...</td>\n",
        "      <td>Improved Insights into the SABIO-RK Database v...</td>\n",
        "      <td>8451.0</td>\n",
        "    </tr>\n",
@@ -582,7 +583,7 @@
        "      <th>31</th>\n",
        "      <td>1:30-1:50</td>\n",
        "      <td>long-20' (talk+Q&amp;A)</td>\n",
-       "      <td>Valerio Arnaboldi, Daniela Raciti, Kimberly Va...</td>\n",
+       "      <td>Kimberly Van Auken, Valerio Arnaboldi, Daniela...</td>\n",
        "      <td>ACKnowledge: expanding community curation to i...</td>\n",
        "      <td>9967.0</td>\n",
        "    </tr>\n",
@@ -590,7 +591,7 @@
        "      <th>32</th>\n",
        "      <td>1:50-2:10</td>\n",
        "      <td>long-20' (talk+Q&amp;A)</td>\n",
-       "      <td>Jane Lomax, Rachael Huntley, Rebecca Foulger, ...</td>\n",
+       "      <td>Rebecca Foulger, Jane Lomax, Rachael Huntley, ...</td>\n",
        "      <td>Machine Learning for Scalable Biocuration</td>\n",
        "      <td>4380.0</td>\n",
        "    </tr>\n",
@@ -886,7 +887,7 @@
        "5   Marcela Tello-Ruiz, Nahla Bassil, Sebastian Be...   \n",
        "6   Yalan Bi, Nancy George, Irene Papatheodorou, A...   \n",
        "8                                                 NaN   \n",
-       "9   Federica Quaglia, Damiano Piovesan, Silvio Tos...   \n",
+       "9   Adel Bouhraoua, Federica Quaglia, Damiano Piov...   \n",
        "10  Frederic B. Bastian, Vincent Gardeux, Bart Dep...   \n",
        "11              Christopher Southan and Miguel Amaral   \n",
        "12                                                NaN   \n",
@@ -897,19 +898,19 @@
        "17  Peter Woollard, Stephane Pesant, Josephine Bur...   \n",
        "18   Jerven Bolleman, Alan Bridge and Nicole Redaschi   \n",
        "19                                                NaN   \n",
-       "20  Maria Victoria Nugnes, Federica Quaglia, Luigg...   \n",
+       "20  Silvio Tosatto, Maria Victoria Nugnes, Federic...   \n",
        "21  Brian Alcock, Amogelang Raphenya, Arman Edalat...   \n",
        "22  Elisabeth Coudert, Sebastien Gehant, Nicole Re...   \n",
        "23                                                NaN   \n",
        "24  Simona Panni, Kalpana Panneerselvam, Pablo Por...   \n",
        "25  Leigh C Carmody, Michael Gargano, Nicole A Vas...   \n",
-       "26  Dorotea Dudaš, Ulrike Wittig, Maja Rey, Andrea...   \n",
+       "26  Ulrike Wittig, Dorotea Dudaš, Maja Rey, Andrea...   \n",
        "27  Amogelang Raphenya, Michael Surette, Gerard Wr...   \n",
        "28  Ziying Yang, Rahel Paloots, Hangjia Zhao and M...   \n",
        "29  Sandra Orchard, Birgit Meldal, Helen Attrill, ...   \n",
        "30                                                NaN   \n",
-       "31  Valerio Arnaboldi, Daniela Raciti, Kimberly Va...   \n",
-       "32  Jane Lomax, Rachael Huntley, Rebecca Foulger, ...   \n",
+       "31  Kimberly Van Auken, Valerio Arnaboldi, Daniela...   \n",
+       "32  Rebecca Foulger, Jane Lomax, Rachael Huntley, ...   \n",
        "33  Carlos Vega, Marek Ostaszewski, Valentin Grouè...   \n",
        "34  Anne Niknejad, Vincent Gardeux, Fabrice David,...   \n",
        "35                                                NaN   \n",
@@ -994,14 +995,20 @@
     }
    ],
    "source": [
-    "url = (\n",
-    "    \"https://docs.google.com/spreadsheets/d/e/2PACX-1vQDrUXGXhAyUUoeTpFV4eZ\"\n",
-    "    \"JViSLAaFvY014X0UX_tHEoxgB6vgFVWRnfrbxjSa74w/pub?gid=1919588799&single=true&output=tsv\"\n",
-    ")\n",
-    "df = pd.read_csv(\n",
-    "    url,\n",
-    "    sep='\\t',\n",
-    "    skiprows=44, usecols=[0,1,2,3,4]\n",
+    "# url = (\n",
+    "#     \"https://docs.google.com/spreadsheets/d/e/2PACX-1vQDrUXGXhAyUUoeTpFV4eZ\"\n",
+    "#     \"JViSLAaFvY014X0UX_tHEoxgB6vgFVWRnfrbxjSa74w/pub?gid=1919588799&single=true&output=tsv\"\n",
+    "# )\n",
+    "# print(f\"Reading {url}\")\n",
+    "# df = pd.read_csv(\n",
+    "#     url,\n",
+    "#     sep='\\t',\n",
+    "#     skiprows=44, usecols=[0,1,2,3,4]\n",
+    "# )\n",
+    "df = pd.read_excel(\n",
+    "    \"Biocuration 2023_submissions_2023-01-04_1672831641(1).xlsx\", \n",
+    "    skiprows=44, \n",
+    "    usecols=[0,1,2,3,4],\n",
     ")\n",
     "df.columns = ['time', 'type', 'speaker', 'title', 'id']\n",
     "df = df[df.time.notna()]\n",
@@ -1075,7 +1082,7 @@
     "                order=0,\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                start=\"14.30\",\n",
-    "                end=\"15.45\",\n",
+    "                end=\"14.45\",\n",
     "                title=\"Conference Salutation\",\n",
     "\n",
     "            ),\n",
@@ -1222,7 +1229,7 @@
     "                chair=\"luana\",\n",
     "                cochair=\"deepti\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
-    "                title=\"Keynote 2 - Guy Cochrane\",\n",
+    "                title=\"Keynote 3 - Guy Cochrane\",\n",
     "                start=\"9.00\",\n",
     "                end=\"10.00\",\n",
     "                day=\"Wednesday\",\n",
@@ -1289,7 +1296,7 @@
        "  'sessions': [{'order': 0,\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'start': '14.30',\n",
-       "    'end': '15.45',\n",
+       "    'end': '14.45',\n",
        "    'title': 'Conference Salutation',\n",
        "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
        "      'genderLabel': 'male',\n",
@@ -1455,6 +1462,7 @@
        "    'day': 'Tuesday',\n",
        "    'date': ' April 25th',\n",
        "    'chairs': [{'genderLabel': 'female',\n",
+       "      'employerLabel_': 'Self-employed (SciBite consultant)',\n",
        "      'github': 'paolaroncaglia',\n",
        "      'gscholar': 'mruxdxAAAAAJ',\n",
        "      'linkedin': 'paolaroncaglia',\n",
@@ -1465,7 +1473,7 @@
        "      'personLabel': 'Paola Roncaglia',\n",
        "      'topics': 'transcriptomics, genome annotation, Genome Annotation, cell type, Gene Ontology, ontology',\n",
        "      'twitter': 'paola_roncaglia'},\n",
-       "     {'employerLabel_': 'SIB Swiss Institute of Bioinformatics',\n",
+       "     {'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'deepakunni3',\n",
        "      'gscholar': '38ZnUjsAAAAJ',\n",
@@ -1488,7 +1496,7 @@
        "    'talks': [{'time_start': '10.00',\n",
        "      'time_end': '10.10',\n",
        "      'type': 'lightning',\n",
-       "      'speaker': 'Federica Quaglia',\n",
+       "      'speaker': 'Adel Bouhraoua',\n",
        "      'title': 'APICURON: standardizing attribution of biocuration activity to promote engagement',\n",
        "      'id': 966},\n",
        "     {'time_start': '10.10',\n",
@@ -1503,7 +1511,7 @@
        "      'speaker': 'Christopher Southan',\n",
        "      'title': 'Resolving code names to structures from the medicinal chemistry literature: not as FAIR as it should be',\n",
        "      'id': 8444}],\n",
-       "    'chairs': [{'employerLabel_': 'SIB Swiss Institute of Bioinformatics',\n",
+       "    'chairs': [{'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'deepakunni3',\n",
        "      'gscholar': '38ZnUjsAAAAJ',\n",
@@ -1517,6 +1525,7 @@
        "      'topics': 'data visualization, Genome browser, knowledge graph, semantic search, data modeling, genomics, ontology, Semantic Web',\n",
        "      'twitter': 'deepakunni3'},\n",
        "     {'genderLabel': 'female',\n",
+       "      'employerLabel_': 'Self-employed (SciBite consultant)',\n",
        "      'github': 'paolaroncaglia',\n",
        "      'gscholar': 'mruxdxAAAAAJ',\n",
        "      'linkedin': 'paolaroncaglia',\n",
@@ -1570,7 +1579,7 @@
        "      'speaker': 'Jerven Bolleman',\n",
        "      'title': 'Making expert curated knowledge graphs FAIR',\n",
        "      'id': 7142}],\n",
-       "    'chairs': [{'employerLabel_': 'SIB Swiss Institute of Bioinformatics',\n",
+       "    'chairs': [{'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'deepakunni3',\n",
        "      'gscholar': '38ZnUjsAAAAJ',\n",
@@ -1584,6 +1593,7 @@
        "      'topics': 'data visualization, Genome browser, knowledge graph, semantic search, data modeling, genomics, ontology, Semantic Web',\n",
        "      'twitter': 'deepakunni3'},\n",
        "     {'genderLabel': 'female',\n",
+       "      'employerLabel_': 'Self-employed (SciBite consultant)',\n",
        "      'github': 'paolaroncaglia',\n",
        "      'gscholar': 'mruxdxAAAAAJ',\n",
        "      'linkedin': 'paolaroncaglia',\n",
@@ -1604,7 +1614,7 @@
        "    'talks': [{'time_start': '13.30',\n",
        "      'time_end': '13.50',\n",
        "      'type': 'long',\n",
-       "      'speaker': 'Maria Victoria Nugnes',\n",
+       "      'speaker': 'Silvio Tosatto',\n",
        "      'title': 'Biocuration in DisProt, the manually curated database for intrinsically disordered proteins',\n",
        "      'id': 1006},\n",
        "     {'time_start': '13.50',\n",
@@ -1619,7 +1629,7 @@
        "      'speaker': 'Elisabeth Coudert',\n",
        "      'title': 'Annotation of biologically relevant ligands in UniProtKB using ChEBI',\n",
        "      'id': 2833}],\n",
-       "    'chairs': [{'employerLabel_': 'Swiss Institute of Bioinformatics',\n",
+       "    'chairs': [{'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'gscholar': 'Bz8HmVoAAAAJ',\n",
        "      'linkedin': 'philippe-le-mercier-846b5713',\n",
@@ -1655,13 +1665,13 @@
        "    'talks': [{'time_start': '13.30',\n",
        "      'time_end': '13.50',\n",
        "      'type': 'long',\n",
-       "      'speaker': 'Valerio Arnaboldi',\n",
+       "      'speaker': 'Kimberly Van Auken',\n",
        "      'title': 'ACKnowledge: expanding community curation to include fact extraction using artificial intelligence',\n",
        "      'id': 9967},\n",
        "     {'time_start': '13.50',\n",
        "      'time_end': '14.10',\n",
        "      'type': 'long',\n",
-       "      'speaker': 'Jane Lomax',\n",
+       "      'speaker': 'Rebecca Foulger',\n",
        "      'title': 'Machine Learning for Scalable Biocuration',\n",
        "      'id': 4380},\n",
        "     {'time_start': '14.10',\n",
@@ -1723,7 +1733,7 @@
        "     {'time_start': '15.05',\n",
        "      'time_end': '15.15',\n",
        "      'type': 'lightning',\n",
-       "      'speaker': 'Dorotea Dudaš',\n",
+       "      'speaker': 'Ulrike Wittig',\n",
        "      'title': 'Improved Insights into the SABIO-RK Database via Visualization',\n",
        "      'id': 8451},\n",
        "     {'time_start': '15.15',\n",
@@ -1758,7 +1768,7 @@
        "      'personLabel': 'Michael Baudis',\n",
        "      'topics': 'Global Alliance for Genomics and Health, genomics, ontology, hematology, oncogenomics, cancer',\n",
        "      'twitter': 'mbaudis'},\n",
-       "     {'employerLabel_': 'Swiss Institute of Bioinformatics',\n",
+       "     {'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'gscholar': 'Bz8HmVoAAAAJ',\n",
        "      'linkedin': 'philippe-le-mercier-846b5713',\n",
@@ -1856,7 +1866,7 @@
        "  'date': 'April 26th',\n",
        "  'sessions': [{'order': 10,\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
-       "    'title': 'Keynote 2 - Guy Cochrane',\n",
+       "    'title': 'Keynote 3 - Guy Cochrane',\n",
        "    'start': '9.00',\n",
        "    'end': '10.00',\n",
        "    'day': 'Wednesday',\n",
@@ -1955,7 +1965,7 @@
        "      'personLabel': 'Deepti J Kundu',\n",
        "      'topics': 'small molecule, protein structure, proteomics, bioinformatics, carbohydrate',\n",
        "      'twitter': 'DeeptiJaiswal'},\n",
-       "     {'employerLabel_': 'Swiss Institute of Bioinformatics',\n",
+       "     {'employerLabel_': 'SIB',\n",
        "      'genderLabel': 'male',\n",
        "      'gscholar': 'Bz8HmVoAAAAJ',\n",
        "      'linkedin': 'philippe-le-mercier-846b5713',\n",
