Update schedule and booklet

--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -1073,13 +1073,54 @@
    "source": [
     "info = [\n",
     "    {\n",
+    "        \"day\": \"Sunday\",\n",
+    "        \"date\": \"April 23rd\",\n",
+    "        \"sessions\": {\n",
+    "            \"Mapping Commons Workshop\": dict(\n",
+    "                order=0,\n",
+    "                room=\"Sala Piero Tortolina Auditorium\",\n",
+    "                start=\"14.30\",\n",
+    "                end=\"17.30\",\n",
+    "                title=\"2nd Mapping Commons Workshop on Simple Standard for Sharing Ontological Mappings\",\n",
+    "            ),\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
     "        \"day\": \"Monday\",\n",
     "        \"date\": \"April 24th\",\n",
     "        \"sessions\": {\n",
+    "            \"Wikidata and OBO Workshop\": dict(\n",
+    "                order=0.1,\n",
+    "                room=\"Spazio 35\",\n",
+    "                start=\"9.00\",\n",
+    "                end=\"11.00\",\n",
+    "                title=\"Aligning Open Biological and Biomedical Ontology Foundry Ontologies with Wikidata Workshop\",\n",
+    "            ),\n",
+    "            \"Biocuration in ML\": dict(\n",
+    "                order=0.2,\n",
+    "                room=\"Sala Piero Tortolina Auditorium\",\n",
+    "                start=\"9.00\",\n",
+    "                end=\"12.00\",\n",
+    "                title=\"Gaining Perspective Towards Enhancing the Intersection of Biocuration and Machine Learning Workshop\",\n",
+    "            ),\n",
+    "            \"Glycans Workshop\": dict(\n",
+    "                order=0.3,\n",
+    "                room=\"Spazio 35\",\n",
+    "                start=\"11.00\",\n",
+    "                end=\"13.00\",\n",
+    "                title=\"Functional Impact of Glycans and Their Curation Workshop\",\n",
+    "            ),\n",
+    "            'Lunch': dict(\n",
+    "                start='13.15',\n",
+    "                end='14.15',\n",
+    "                room=\"Agora\",\n",
+    "                title='Lunch Break and Sponsors Exhibition',\n",
+    "                order=0.35,\n",
+    "            ),\n",
     "            'Monday Salutation': dict(\n",
     "                chair=\"charles\",\n",
     "                cochair=\"silvio\",\n",
-    "                order=0,\n",
+    "                order=0.4,\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                start=\"14.30\",\n",
     "                end=\"14.45\",\n",
@@ -1106,6 +1147,13 @@
     "                day=\"Monday\",\n",
     "                date=\"April 24th\",\n",
     "            ),\n",
+    "            'Coffee': dict(\n",
+    "                start='16.00',\n",
+    "                end='16.30',\n",
+    "                room=\"Agora\",\n",
+    "                title='Coffee Break and Sponsors Exhibition',\n",
+    "                order=1.5,\n",
+    "            ),\n",
     "            'Monday afternoon session: standards': dict(\n",
     "                order=2,\n",
     "                day=\"Monday\",\n",
@@ -1116,6 +1164,13 @@
     "                chair=\"frédérique\",\n",
     "                cochair=\"deepti\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
+    "            ),\n",
+    "            'Drinkies': dict(\n",
+    "                start='18.30',\n",
+    "                end='20.00',\n",
+    "                room=\"Agora\",\n",
+    "                title='Welcome cocktail',\n",
+    "                order=3,\n",
     "            ),\n",
     "        },\n",
     "    },\n",
@@ -1145,6 +1200,13 @@
     "                cochair=\"paola\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "            ), \n",
+    "            'Coffee': dict(\n",
+    "                start='10.30',\n",
+    "                end='11.00',\n",
+    "                room=\"Agora\",\n",
+    "                title='Coffee Break and Sponsors Exhibition',\n",
+    "                order=4.5,\n",
+    "            ),\n",
     "            'Tuesday morning session: FAIR 2': dict(\n",
     "                order=5,\n",
     "                day=\"Tuesday\",\n",
@@ -1156,6 +1218,13 @@
     "                cochair=\"paola\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "            ), \n",
+    "            'Lunch': dict(\n",
+    "                start='12.30',\n",
+    "                end='13:30',\n",
+    "                room=\"Agora\",\n",
+    "                title='Lunch Break and Sponsors Exhibition',\n",
+    "                order=5.5,\n",
+    "            ),\n",
     "            'Tuesday afternoon session (parallel 1): applications 1': dict(\n",
     "                order=6,\n",
     "                day=\"Tuesday\",\n",
@@ -1218,6 +1287,13 @@
     "                title=\"Poster Session 2 (Odd Numbers)\",\n",
     "                room=\"Agora\",\n",
     "            ),\n",
+    "            'Dinner': dict(\n",
+    "                start='20.00',\n",
+    "                end='23.30',\n",
+    "                room=\"Caffè Pedrocchi\",\n",
+    "                title='Evening Networking or Social Dinner',\n",
+    "                order=12,\n",
+    "            ),\n",
     "        }\n",
     "    },\n",
     "    {\n",
@@ -1246,6 +1322,13 @@
     "                cochair=\"frédérique\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "            ),\n",
+    "            'Coffee': dict(\n",
+    "                start='10.30',\n",
+    "                end='11.00',\n",
+    "                room=\"Agora\",\n",
+    "                title='Coffee Break and Sponsors Exhibition',\n",
+    "                order=11.5,\n",
+    "            ),\n",
     "            \"Wednesday Careers in Biocuration\": dict(\n",
     "                order=12,\n",
     "                chair=\"deepti\",\n",
@@ -1254,8 +1337,16 @@
     "                cochair=\"philippe\",\n",
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                title=\"Careers in Biocuration Panel/Workshop\",\n",
+    "                description=\"Lead by Nicole Vasilevsky\",\n",
     "                start=\"11.00\",\n",
     "                end=\"12.00\",\n",
+    "            ),\n",
+    "            'Lunch': dict(\n",
+    "                start='12.00',\n",
+    "                end='13.00',\n",
+    "                room=\"Agora\",\n",
+    "                title='Lunch Break and Sponsors Exhibition',\n",
+    "                order=12.5,\n",
     "            ),\n",
     "            'Wednesday afternoon session: community': dict(\n",
     "                order=13,\n",
@@ -1291,9 +1382,36 @@
     {
      "data": {
       "text/plain": [
-       "[{'day': 'Monday',\n",
-       "  'date': 'April 24th',\n",
+       "[{'day': 'Sunday',\n",
+       "  'date': 'April 23rd',\n",
        "  'sessions': [{'order': 0,\n",
+       "    'room': 'Sala Piero Tortolina Auditorium',\n",
+       "    'start': '14.30',\n",
+       "    'end': '17.30',\n",
+       "    'title': '2nd Mapping Commons Workshop on Simple Standard for Sharing Ontological Mappings'}]},\n",
+       " {'day': 'Monday',\n",
+       "  'date': 'April 24th',\n",
+       "  'sessions': [{'order': 0.1,\n",
+       "    'room': 'Spazio 35',\n",
+       "    'start': '9.00',\n",
+       "    'end': '11.00',\n",
+       "    'title': 'Aligning Open Biological and Biomedical Ontology Foundry Ontologies with Wikidata Workshop'},\n",
+       "   {'order': 0.2,\n",
+       "    'room': 'Sala Piero Tortolina Auditorium',\n",
+       "    'start': '9.00',\n",
+       "    'end': '12.00',\n",
+       "    'title': 'Gaining Perspective Towards Enhancing the Intersection of Biocuration and Machine Learning Workshop'},\n",
+       "   {'order': 0.3,\n",
+       "    'room': 'Spazio 35',\n",
+       "    'start': '11.00',\n",
+       "    'end': '13.00',\n",
+       "    'title': 'Functional Impact of Glycans and Their Curation Workshop'},\n",
+       "   {'start': '13.15',\n",
+       "    'end': '14.15',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Lunch Break and Sponsors Exhibition',\n",
+       "    'order': 0.35},\n",
+       "   {'order': 0.4,\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'start': '14.30',\n",
        "    'end': '14.45',\n",
@@ -1384,6 +1502,11 @@
        "      'personLabel': 'Deepti J Kundu',\n",
        "      'topics': 'small molecule, protein structure, proteomics, bioinformatics, carbohydrate',\n",
        "      'twitter': 'DeeptiJaiswal'}]},\n",
+       "   {'start': '16.00',\n",
+       "    'end': '16.30',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Coffee Break and Sponsors Exhibition',\n",
+       "    'order': 1.5},\n",
        "   {'order': 2,\n",
        "    'day': 'Monday',\n",
        "    'date': 'April 24th',\n",
@@ -1451,7 +1574,12 @@
        "      'personDescription': 'researcher (ORCID 0000-0003-2989-5971)',\n",
        "      'personLabel': 'Deepti J Kundu',\n",
        "      'topics': 'small molecule, protein structure, proteomics, bioinformatics, carbohydrate',\n",
-       "      'twitter': 'DeeptiJaiswal'}]}]},\n",
+       "      'twitter': 'DeeptiJaiswal'}]},\n",
+       "   {'start': '18.30',\n",
+       "    'end': '20.00',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Welcome cocktail',\n",
+       "    'order': 3}]},\n",
        " {'day': 'Tuesday',\n",
        "  'date': 'April 25th',\n",
        "  'sessions': [{'order': 3,\n",
@@ -1536,6 +1664,11 @@
        "      'personLabel': 'Paola Roncaglia',\n",
        "      'topics': 'transcriptomics, genome annotation, Genome Annotation, cell type, Gene Ontology, ontology',\n",
        "      'twitter': 'paola_roncaglia'}]},\n",
+       "   {'start': '10.30',\n",
+       "    'end': '11.00',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Coffee Break and Sponsors Exhibition',\n",
+       "    'order': 4.5},\n",
        "   {'order': 5,\n",
        "    'day': 'Tuesday',\n",
        "    'date': ' April 25th',\n",
@@ -1604,6 +1737,11 @@
        "      'personLabel': 'Paola Roncaglia',\n",
        "      'topics': 'transcriptomics, genome annotation, Genome Annotation, cell type, Gene Ontology, ontology',\n",
        "      'twitter': 'paola_roncaglia'}]},\n",
+       "   {'start': '12.30',\n",
+       "    'end': '13:30',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Lunch Break and Sponsors Exhibition',\n",
+       "    'order': 5.5},\n",
        "   {'order': 6,\n",
        "    'day': 'Tuesday',\n",
        "    'date': 'April 25th',\n",
@@ -1861,7 +1999,12 @@
        "    'start': '17.00',\n",
        "    'end': '18.00',\n",
        "    'title': 'Poster Session 2 (Odd Numbers)',\n",
-       "    'room': 'Agora'}]},\n",
+       "    'room': 'Agora'},\n",
+       "   {'start': '20.00',\n",
+       "    'end': '23.30',\n",
+       "    'room': 'Caffè Pedrocchi',\n",
+       "    'title': 'Evening Networking or Social Dinner',\n",
+       "    'order': 12}]},\n",
        " {'day': 'Wednesday',\n",
        "  'date': 'April 26th',\n",
        "  'sessions': [{'order': 10,\n",
@@ -1945,11 +2088,17 @@
        "      'topics': 'glycoproteomics, interactomics, protein-protein interaction, glycoprotein, Semantic Web',\n",
        "      'twitter': 'GlycomicsExpasy',\n",
        "      'note': 'Chair'}]},\n",
+       "   {'start': '10.30',\n",
+       "    'end': '11.00',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Coffee Break and Sponsors Exhibition',\n",
+       "    'order': 11.5},\n",
        "   {'order': 12,\n",
        "    'day': 'Wednesday',\n",
        "    'date': 'April 26th',\n",
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'title': 'Careers in Biocuration Panel/Workshop',\n",
+       "    'description': 'Lead by Nicole Vasilevsky',\n",
        "    'start': '11.00',\n",
        "    'end': '12.00',\n",
        "    'chairs': [{'employerLabel_': 'European Bioinformatics Institute',\n",
@@ -1977,6 +2126,11 @@
        "      'personLabel': 'Philippe Le Mercier',\n",
        "      'topics': 'molecular virology, biocuration, bioinformatics, virology',\n",
        "      'twitter': 'ViralZone'}]},\n",
+       "   {'start': '12.00',\n",
+       "    'end': '13.00',\n",
+       "    'room': 'Agora',\n",
+       "    'title': 'Lunch Break and Sponsors Exhibition',\n",
+       "    'order': 12.5},\n",
        "   {'order': 13,\n",
        "    'day': 'Wednesday',\n",
        "    'date': 'April 26th',\n",
@@ -2126,7 +2280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
