Update schedule and booklet

--- a/scripts/Process Schedule.ipynb
+++ b/scripts/Process Schedule.ipynb
@@ -1124,7 +1124,7 @@
     "                room=\"Sala Piero Tortolina Auditorium\",\n",
     "                start=\"14.30\",\n",
     "                end=\"14.45\",\n",
-    "                title=\"Conference Salutation\",\n",
+    "                title=\"Conference Salutation from Charles Tapley Hoyt\",\n",
     "\n",
     "            ),\n",
     "            'Monday Salutation ISB': dict(\n",
@@ -1415,7 +1415,7 @@
        "    'room': 'Sala Piero Tortolina Auditorium',\n",
        "    'start': '14.30',\n",
        "    'end': '14.45',\n",
-       "    'title': 'Conference Salutation',\n",
+       "    'title': 'Conference Salutation from Charles Tapley Hoyt',\n",
        "    'chairs': [{'employerLabel_': 'Harvard Medical School',\n",
        "      'genderLabel': 'male',\n",
        "      'github': 'cthoyt',\n",
